@@ -45,7 +45,7 @@
         ], class_='margin-top-right')}
       </div>
       <dl class="tabs" data-tab="">
-        <dd py:for="idx, file in enumerate(progress.files)" id="${h.frontend.html_id(file.filename)}-tab" class="${'active' if idx == 0 else ''}">
+        <dd py:for="idx, file in enumerate(progress.files)" py:if="file.mimetype.startswith('text/')" id="${h.frontend.html_id(file.filename)}-tab" class="${'active' if idx == 0 else ''}">
           <div class="right">
             ${h.frontend.menubar([
               {'group': 'save', 'items': [
@@ -71,7 +71,7 @@
         </dd>
       </dl>
       <form class="tabs-content">
-        <div py:for="idx, file in enumerate(progress.files)" class="content ${'active' if idx == 0 else ''}" id="${h.frontend.html_id(file.filename)}">
+        <div py:for="idx, file in enumerate(progress.files)" py:if="file.mimetype.startswith('text/')" class="content ${'active' if idx == 0 else ''}" id="${h.frontend.html_id(file.filename)}">
           ${h.form.tags.textarea('', file.data.decode('utf-8') if file.data else '', None, data_wte_mimetype=file.mimetype, data_wte_fileid=file.id, data_wte_cm_options=h.frontend.codemirror_options(r, file.mimetype))}
         </div>
       </form>
